# AdventOfCode2023

Day01/: .gitignore  CMakeLists.txt  README.md
Day01/scripts/: build.sh  clean.sh
Day01/src/: Main.cpp
Day01/src/Algorithm/: Algorithm.cpp  Algorithm.hpp
Day01/src/Parser/: Parser.cpp  Parser.hpp
Day02/: .gitignore  CMakeLists.txt  README.md
Day02/scripts/: build.sh  clean.sh
Day02/src/: Cubes.hpp  Main.cpp
Day02/src/Algorithm/: Algorithm.cpp  Algorithm.hpp
Day02/src/Parser/: Parser.cpp  Parser.hpp
Day02/src/Utils/: Utils.cpp  Utils.hpp
Day03/: .gitignore  CMakeLists.txt  README.md
Day03/scripts/: build.sh  clean.sh
Day03/src/: Main.cpp
Day03/src/Algorithm/: Algorithm.cpp  Algorithm.hpp
Day03/src/Parser/: Parser.cpp  Parser.hpp
